[gd_scene load_steps=17 format=3 uid="uid://1lkvdd4df0p3"]

[ext_resource type="Script" uid="uid://csd1anqre5c5y" path="res://game_objects/day_manager/day_manager.gd" id="1_a83q5"]
[ext_resource type="Texture2D" uid="uid://ssd1xa30atqh" path="res://assets/Apartment.png" id="1_s7ihx"]
[ext_resource type="Script" uid="uid://bspqob2naifl0" path="res://game_objects/card_played_calculator/card_played_calculator.gd" id="2_6bhvp"]
[ext_resource type="Script" uid="uid://bfmu0gs5g1f77" path="res://game_objects/player/player.gd" id="2_h6cjv"]
[ext_resource type="PackedScene" uid="uid://dplixbn470yd7" path="res://hand_root.tscn" id="2_rhhlq"]
[ext_resource type="Texture2D" uid="uid://fbc23f0vnl8d" path="res://assets/BigMac_Tonight.jpg" id="3_4odn2"]
[ext_resource type="Script" uid="uid://52psbp3aqel3" path="res://game_objects/card_drop_area/card_drop_area.gd" id="3_urk8b"]
[ext_resource type="PackedScene" uid="uid://c21huh347s2ug" path="res://game_objects/card/card_ui.tscn" id="3_xuagx"]
[ext_resource type="Resource" uid="uid://cwwxiff6d7dgx" path="res://Resources/Card Types/Family Excuses/grandma_died.tres" id="4_aqiog"]
[ext_resource type="Resource" uid="uid://dk6xa606gslde" path="res://Resources/Card Types/Misc Excuses/the_runs.tres" id="5_v06vk"]
[ext_resource type="Resource" uid="uid://dgesk4vmcuq46" path="res://Resources/Card Types/Misc Excuses/tired.tres" id="6_a83q5"]
[ext_resource type="Resource" uid="uid://byp6slx5qot5u" path="res://Resources/Card Types/Family Excuses/the_ol_ball_and_chain.tres" id="7_v06vk"]
[ext_resource type="PackedScene" uid="uid://dxxx2prbs8u6j" path="res://game_objects/event/event_ui.tscn" id="9_jhlk3"]
[ext_resource type="Resource" uid="uid://c8wabxfd62bq7" path="res://Resources/Card Types/Friend Excuses/gotta_help_friend_move.tres" id="13_sxvck"]
[ext_resource type="PackedScene" uid="uid://7e4ru3ywfscn" path="res://game_objects/success_check_pop_up/success_check_pop_up.tscn" id="15_gibmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7ihx"]
size = Vector2(118, 184)

[node name="Apartment" type="Node2D"]
script = ExtResource("1_a83q5")

[node name="Player" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_h6cjv")

[node name="CardPlayedCalculator" type="Node" parent="."]
script = ExtResource("2_6bhvp")

[node name="Apartment_Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 540)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_s7ihx")

[node name="CardDropArea" type="Area2D" parent="."]
position = Vector2(848, 226)
collision_layer = 2
script = ExtResource("3_urk8b")

[node name="Sprite2D" type="Sprite2D" parent="CardDropArea"]
scale = Vector2(0.40691203, 0.56079614)
texture = ExtResource("3_4odn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
scale = Vector2(1.6690297, 1.4598985)
shape = SubResource("RectangleShape2D_s7ihx")

[node name="UI" type="CanvasLayer" parent="." groups=["ui_layer"]]

[node name="Hand_Root" parent="UI" instance=ExtResource("2_rhhlq")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -472.501
offset_top = -389.25964
offset_right = 543.499
offset_bottom = -82.25964
grow_horizontal = 2
grow_vertical = 0
rotation = 0.0027675813
alignment = 1

[node name="CardUI" parent="UI/Hand_Root" instance=ExtResource("3_xuagx")]
layout_mode = 2
tooltip_text = "The Grandma Died Card is a trump card of sorts when a card of the specific suit hasn't been used recently"
debug_card_data = ExtResource("4_aqiog")
card_data = ExtResource("4_aqiog")

[node name="CardUI2" parent="UI/Hand_Root" instance=ExtResource("3_xuagx")]
layout_mode = 2
debug_card_data = ExtResource("5_v06vk")
card_data = ExtResource("5_v06vk")

[node name="CardUI3" parent="UI/Hand_Root" instance=ExtResource("3_xuagx")]
layout_mode = 2
card_data = ExtResource("6_a83q5")

[node name="CardUI4" parent="UI/Hand_Root" instance=ExtResource("3_xuagx")]
layout_mode = 2
card_data = ExtResource("7_v06vk")

[node name="CardUI5" parent="UI/Hand_Root" instance=ExtResource("3_xuagx")]
layout_mode = 2
card_data = ExtResource("13_sxvck")

[node name="EventUI" parent="UI" instance=ExtResource("9_jhlk3")]
unique_name_in_owner = true
offset_left = 1191.0
offset_top = 97.0
offset_right = -205.0
offset_bottom = -699.0
metadata/_edit_use_anchors_ = true

[node name="NextEventButton" type="Button" parent="UI"]
unique_name_in_owner = true
offset_left = 1800.0
offset_top = 528.0
offset_right = 1899.0
offset_bottom = 610.0
text = "Next Event"

[node name="TopHUDInfo" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2

[node name="CurrentDay" type="Label" parent="UI/TopHUDInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Current Day"

[node name="CurrentWeek" type="Label" parent="UI/TopHUDInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.29
text = "Current Week "

[node name="PlayerEnergy" type="Label" parent="UI/TopHUDInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Energy"

[node name="SuccessCheckPopUp" parent="UI" instance=ExtResource("15_gibmg")]
offset_left = 25.0
offset_top = 123.0
offset_right = -1232.0
offset_bottom = -827.0

[connection signal="pressed" from="UI/NextEventButton" to="." method="_on_next_event_button_pressed"]
